--- a/make/Makefile.mingw
+++ b/make/Makefile.mingw
@@ -1,4 +1,4 @@
-APP = church2
+APP = church2.exe
 BIN_DIR = ..
 SRC_DIR = ../src
 GFX_DIR = ../gfx
@@ -10,4 +10,4 @@ OBJ_DIR = ../obj
 # if you do not have a2x/bin in your $PATH
 #
 A2X_PATH := $(shell a2x_path)
-include $(A2X_PATH)/make/project/Makefile.linux
+include $(A2X_PATH)/make/project/Makefile.mingw
