--- a/make/Makefile
+++ b/make/Makefile
@@ -7,7 +7,7 @@ A_CONFIG_APP_VERSION_MINOR := 0
 A_CONFIG_APP_VERSION_MICRO := 0
 
 A_CONFIG_SCREEN_WIDTH := 256
-A_CONFIG_SCREEN_HEIGHT := $(A_CONFIG_SCREEN_WIDTH)
+A_CONFIG_SCREEN_HEIGHT := 256
 A_CONFIG_SCREEN_MAXIMIZED := 0
 A_CONFIG_SCREEN_ZOOM := 2
 
