--- a/make/Makefile
+++ b/make/Makefile
@@ -6,11 +6,11 @@ A_CONFIG_APP_VERSION_MAJOR := 1
 A_CONFIG_APP_VERSION_MINOR := 0
 A_CONFIG_APP_VERSION_MICRO := 0
 
-A_CONFIG_BUILD_CFLAGS := -DZ_SHOW_MAP
+#A_CONFIG_BUILD_CFLAGS := -DZ_SHOW_MAP
 
-A_CONFIG_SCREEN_WIDTH := 160
-A_CONFIG_SCREEN_HEIGHT := 120
-A_CONFIG_SCREEN_MAXIMIZED := 0
-A_CONFIG_SCREEN_ZOOM := 4
+A_CONFIG_SCREEN_WIDTH := -1
+A_CONFIG_SCREEN_HEIGHT := -1
+#A_CONFIG_SCREEN_MAXIMIZED := 0
+#A_CONFIG_SCREEN_ZOOM := 4
 
 include $(A2X_PATH)/make/dev
