Map gen fixes and improvements.

--- a/make/Makefile
+++ b/make/Makefile
@@ -8,8 +8,10 @@ A_CONFIG_APP_VERSION_MICRO := 0
 
 #A_CONFIG_BUILD_CFLAGS := -DZ_SHOW_MAP
 
-A_CONFIG_SCREEN_WIDTH := -1
-A_CONFIG_SCREEN_HEIGHT := -1
+#A_CONFIG_SCREEN_WIDTH := -1
+#A_CONFIG_SCREEN_HEIGHT := -1
+A_CONFIG_SCREEN_WIDTH := 320
+A_CONFIG_SCREEN_HEIGHT := 200
 #A_CONFIG_SCREEN_MAXIMIZED := 0
 #A_CONFIG_SCREEN_ZOOM := 4
 
