Draw game screen and screen noise.

--- a/make/Makefile
+++ b/make/Makefile
@@ -9,4 +9,6 @@ A_CONFIG_APP_VERSION_MICRO := 1
 A_CONFIG_SCREEN_WIDTH := 512
 A_CONFIG_SCREEN_HEIGHT := 320
 
+A_CONFIG_COLOR_SCREEN_BORDER := 0x7a9899
+
 include $(A2X_PATH)/make/dev
